<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FroyoFoto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email_address">Email Address</string>
    <string name="send_button">Send</string>
    <string name="to_email">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="preview">Image Preview</string>
    <string name="image_preview_desc">Image Attachment Preview</string>
    <string name="to_email_hint">user@email.com</string>
</resources>
