<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/to_email"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/address"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/address"
            android:layout_below="@+id/textView3"
            android:hint="@string/to_email_hint"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject"
            android:id="@+id/textView"
            android:layout_below="@+id/address"
            android:layout_alignLeft="@+id/address"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subject"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/address"
            android:layout_alignLeft="@+id/textView"
            android:inputType="textAutoCorrect"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/message"
            android:id="@+id/textView2"
            android:layout_below="@+id/subject"
            android:layout_alignLeft="@+id/subject"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/message"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignRight="@+id/subject"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_button"
            android:id="@+id/send"
            android:layout_below="@+id/message"
            android:layout_alignLeft="@+id/message"
            android:layout_marginTop="12dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_below="@+id/send"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/image_preview_desc"
            android:layout_margin="20dp"/>


</RelativeLayout>